--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-VUE_APP_API=http://192.168.1.239:30002
+VUE_APP_API=/
 VUE_APP_RAW_URL=https://data-seed-prebsc-1-s1.binance.org:8545
 VUE_APP_SOURCE_CHAIN_URL=https://data-seed-prebsc-2-s2.binance.org:8545
 VUE_APP_TARGET_CHAIN_URL=https://data-seed-pressc-1.sinso.io/
